# ENSSAT-SNum2-Test-and-Verification

./: README.md
1_Software/: README.md
1_Software/Stage_1/: Makefile
1_Software/Stage_1/src/: main.c
1_Software/Step_1/: CMakeLists.txt
2_Hardware/: README.md
2_Hardware/Etape_4/test_generator/src/: main.c
2_Hardware/Etape_7/c_code/src/: main.cpp
2_Hardware/Step_4/test_generator/: Makefile
2_Hardware/Step_7/c_code/: Makefile
2_Hardware/Step_7/src/: PGCD.vhd  PGCD_uart.vhd
3_Hardware_advanced/: README.md
3_Hardware_advanced/Step_1/: bench_compteur.vhd  composant.vhd  compteur.vhd
3_Hardware_advanced/Step_2/: C2.vhd  bench_C2.vhd
3_Hardware_advanced/partie_1/: bench_composant.vhd
